syntax = "proto3";

package proto;

option go_package = "./;proto";

service InterceptorService {
  rpc InterceptorInterface (InterceptorRequest) returns (InterceptorResponse);
}

message InterceptorRequest {
  string name = 1;
}

message InterceptorResponse {
  string message = 1;
}
// protoc --go_out=./proto --go-grpc_out=./proto ./proto/interceptor.proto
